Store active user in browser' session

--- a/Highfive_Hospital/src/High5/Hospital/AdminHospitalBundle/Resources/views/Default/index.html.twig
+++ b/Highfive_Hospital/src/High5/Hospital/AdminHospitalBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,5 @@
-Hello {{ name }}!
+Welcome {{ username }}!
+
+<div>
+<a href="{{ path('_welcome') }}admin_hospital/patient/create">Create Patient</a>
+</div>
