--- a/Highfive_Hospital/src/High5/Hospital/AdminHospitalBundle/Resources/views/Default/index.html.twig
+++ b/Highfive_Hospital/src/High5/Hospital/AdminHospitalBundle/Resources/views/Default/index.html.twig
@@ -1,5 +1,11 @@
 Welcome {{ username }}!
 
 <div>
-<a href="{{ path('_welcome') }}admin_hospital/patient/create">Create Patient</a>
+<a href="{{ path('_welcome') }}admin_hospital/add/patient">Add Patient</a>
+</div>
+<div>
+<a href="{{ path('_welcome') }}admin_hospital/add/doctor">Add Doctor</a>
+</div>
+<div>
+<a href="{{ path('_welcome') }}admin_hospital/logout">Logout</a>
 </div>
